; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv.c_jvp_object_read.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv.c_jvp_object_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_slot = type { i32 }

@JV_KIND_STRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32)* @jvp_object_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @jvp_object_read(i32 %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.object_slot*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @JV_KIND_STRING, align 4
  %10 = call i32 @JVP_HAS_KIND(i32 %8, i32 %9)
  %11 = call i32 @assert(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32* @jvp_object_find_bucket(i32 %12, i32 %13)
  store i32* %14, i32** %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = call %struct.object_slot* @jvp_object_find_slot(i32 %15, i32 %16, i32* %17)
  store %struct.object_slot* %18, %struct.object_slot** %7, align 8
  %19 = load %struct.object_slot*, %struct.object_slot** %7, align 8
  %20 = icmp eq %struct.object_slot* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %25

22:                                               ; preds = %2
  %23 = load %struct.object_slot*, %struct.object_slot** %7, align 8
  %24 = getelementptr inbounds %struct.object_slot, %struct.object_slot* %23, i32 0, i32 0
  store i32* %24, i32** %3, align 8
  br label %25

25:                                               ; preds = %22, %21
  %26 = load i32*, i32** %3, align 8
  ret i32* %26
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @JVP_HAS_KIND(i32, i32) #1

declare dso_local i32* @jvp_object_find_bucket(i32, i32) #1

declare dso_local %struct.object_slot* @jvp_object_find_slot(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
